[package]
name = "lunco-controller"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["default"] }
smallvec = { workspace = true }
leafwing-input-manager = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-mobility = { path = "../lunco-mobility" }
