[package]
name = "lunco-controller"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
lunco-core = { path = "../lunco-core" }
# The ONE generic vessel-control command `SetPorts` (a batch of named input-port
# writes) lives in `lunco-cosim`; `drive_from_bindings` triggers it from held keys.
lunco-cosim = { path = "../lunco-cosim" }

[lints]
workspace = true
