[package]
name = "lunco-core"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["default"] }
smallvec = { workspace = true }
big_space = { workspace = true }
leafwing-input-manager.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
lunco-command-macro = { path = "../lunco-command-macro" }
# `std::time::SystemTime::now()` panics on wasm32-unknown-unknown.
web-time = { workspace = true }
