[package]
name = "lunco-core"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true }
big_space = { workspace = true }
leafwing-input-manager.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
lunco-command-macro = { path = "../lunco-command-macro" }
# The workspace hashing substrate (fast tier). `identity` derives cross-peer ids
# with byte-wise FNV-1a; this is the one canonical impl, shared with terrain
# cache keys + precompute, instead of a copy-pasted fold. Dependency-free.
lunco-hash = { path = "../lunco-hash" }
# Language-neutral internal hook registry — powers the optional scripted
# authorization policy in `authorize()` ("policy→rhai"). Dependency-free, so it
# adds no weight and can't cycle; absent a registered hook it's a no-op.
lunco-hooks = { path = "../lunco-hooks" }
# `std::time::SystemTime::now()` panics on wasm32-unknown-unknown.
web-time = { workspace = true }
# Real entropy for the per-process id seed (`ids.rs`). The workspace pin enables
# getrandom's `js` feature so this also works on wasm32 (crypto.getRandomValues).
getrandom_02 = { workspace = true }

[lints]
workspace = true
