[package]
name = "lunco-cosim"
version = "0.1.0"
description = "Co-simulation orchestration for LunCoSim — connects multiple simulation models (Modelica, FMU, GMAT, Avian) via explicit wires."
edition = "2021"

[dependencies]
bevy.workspace = true
lunco-core = { path = "../lunco-core" }
avian3d.workspace = true

[dev-dependencies]
avian3d = { workspace = true, features = ["default-collider"] }
lunco-sandbox-edit = { path = "../lunco-sandbox-edit" }
lunco-modelica = { path = "../lunco-modelica" }
