[package]
name = "lunco-cosim"
version = "0.1.0"
description = "Co-simulation orchestration for LunCoSim — connects multiple simulation models (Modelica, FMU, GMAT, Avian) via explicit wires."
edition = "2021"

[dependencies]
bevy.workspace = true
avian3d.workspace = true
lunco-core = { path = "../lunco-core" }

[dev-dependencies]
avian3d = { workspace = true }
lunco-scene-commands = { path = "../lunco-scene-commands" }
# `default-features = false`: without it, `cargo test --workspace` unifies
# `lunco-modelica/ui` (→ bevy_egui) ON for the entire graph, including the
# headless server and the wasm worker. See docs/reviews (A1).
lunco-modelica = { path = "../lunco-modelica", default-features = false }
lunco-celestial = { path = "../lunco-celestial" }
lunco-environment = { path = "../lunco-environment" }
lunco-scripting = { path = "../lunco-scripting" }
lunco-doc = { path = "../lunco-doc" }
env_logger = "0.11"

[features]
python = ["lunco-scripting/python"]

[lints]
workspace = true
