[package]
name = "lunco-doc-bevy"
version = "0.1.0"
edition = "2021"
description = "Bevy integration for the LunCoSim Document System — generic document-lifecycle events and the Twin-level change journal."

[dependencies]
bevy = { workspace = true }
# egui only powers two UI-only systems (keyboard-intent suppression + repaint
# fanout). Optional so a headless `--no-default-features` build (server) drops
# egui→winit entirely; the document-lifecycle events/types stay egui-free.
bevy_egui = { workspace = true, optional = true }
# `Command`, `on_command`, `register_commands` macro re-exports.
lunco-core = { path = "../lunco-core" }
lunco-doc = { path = "../lunco-doc" }
# Canonical Twin-scoped op journal (Lamport-ordered, CRDT-shapable schema).
lunco-twin-journal = { path = "../lunco-twin-journal" }
# Status serialisation for the shared diagnostics store (one JSON shape every
# domain's status query returns).
serde_json = { workspace = true }
# wasm-safe monotonic clock for compile-timing ("compiled in N ms") in the
# shared diagnostics store.
web-time = { workspace = true }

[features]
default = ["ui"]
# The egui-dependent editor-intent + view-sync systems. Off ⇒ no bevy_egui.
ui = ["dep:bevy_egui"]

[lints]
workspace = true
