[package]
name = "lunco-doc-bevy"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Bevy integration for the LunCoSim Document System — generic document-lifecycle events and the Twin-level change journal."

[dependencies]
bevy = { workspace = true }
# egui only powers two UI-only systems (keyboard-intent suppression + repaint
# fanout). Optional so a headless `--no-default-features` build (server) drops
# egui→winit entirely; the document-lifecycle events/types stay egui-free.
bevy_egui = { workspace = true, optional = true }
# `Command`, `on_command`, `register_commands` macro re-exports.
lunco-core = { path = "../lunco-core" }
lunco-doc = { path = "../lunco-doc" }
# Canonical Twin-scoped op journal (Lamport-ordered, CRDT-shapable schema).
lunco-twin-journal = { path = "../lunco-twin-journal" }
# `DocumentRegistry::replay_op` parses a journal entry's serialized op payload
# back into the domain's `D::Op` — the networked-edit consume path.
serde = { workspace = true }
serde_json = { workspace = true }
# Durable journal persistence (headless-safe): byte-level I/O + the user config
# dir. Both are egui-free, so they don't pull UI into the headless server.

[features]
default = ["ui"]
# The egui-dependent editor-intent + view-sync systems. Off ⇒ no bevy_egui.
ui = ["dep:bevy_egui"]

[lints]
workspace = true
