[package]
name = "lunco-doc"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Document System foundation for LunCoSim — Document, DocumentOp, DocumentHost with undo/redo. UI-free, headless-capable."

[dependencies]
# Single dependency: `lunco-core` for the `Mutation` / `Ack` /
# `Reject` envelope and the `OpId` identity primitive. Pulls bevy
# transitively, which is a regression on the original "headless data
# model" stance — the right long-term move is to split lunco-core
# into a bevy-free identity sub-crate. For now the simpler tradeoff
# wins; every consumer of lunco-doc already depends on lunco-core.
lunco-core = { path = "../lunco-core" }
# `bevy_reflect` is the standalone reflection crate — much smaller
# than full `bevy` (no renderer / ECS / windowing). Lets `DocumentId`
# derive `Reflect` so commands and other API-facing types can carry
# it directly instead of degrading to `u64` at every reflect boundary.
bevy_reflect = { workspace = true }
# Serde for stable disk + wire formats: journal entries, save/restore,
# future network sync, lunco-api command payloads. Public lunco-doc
# types derive Serialize/Deserialize so consumers don't hand-roll u64
# shims at the boundary.
serde = { workspace = true }
# Status serialisation for the shared diagnostics store (`status_json`) — one
# JSON shape every domain's status query returns. Data-only, no Bevy.
serde_json = { workspace = true }

[dev-dependencies]
# Only for tests. The toy TextDocument needs no external crates.

[lints]
workspace = true
