[package]
name = "lunco-environment"
version = "0.1.0"
edition = "2021"
description = "Per-entity environmental state (gravity, atmosphere, radiation, lighting) computed from celestial body providers. RENDER-FREE."

[dependencies]
# RENDER-FREE. There is no `render` feature any more and there must not be one:
# the gate is *which plugins you add*, not `#[cfg]`. `bevy_light` gives
# `DirectionalLight` / `CascadeShadowConfig` / `GlobalAmbientLight`; `bevy_camera`
# gives `RenderLayers` + `Exposure`; `bevy_mesh` + `bevy_image` give the horizon
# bake its `Mesh3d` input and its `Image` output. NONE of them depends on
# `bevy_render`, so gravity, the earthshine fill, the sun→cosim feed AND the
# heightfield-shadow bakes all build and run without wgpu.
#
# The two things that used to force `bevy_pbr` here have MOVED to the binder crate:
#   1. `wire_terrain_materials` / `shade_dynamic_entities` → `lunco-render-bevy::horizon_shade`
#   2. the `Bloom` arm of `SetEnvironmentLight`           → `lunco-render-bevy::env_light`
# DO NOT add `bevy_pbr` / `bevy_post_process` back — see
# docs/architecture/render-decoupling.md.
#
# `zstd_rust`: `bevy_image` refuses to build without a zstd backend chosen; name it
# here so a per-crate `cargo check/test -p lunco-environment` stands alone.
bevy = { workspace = true, features = ["bevy_camera", "bevy_light", "bevy_mesh", "bevy_image", "zstd_rust"] }
# `Extent3d` / `TextureFormat` / `TextureDimension` for the baked heightfield +
# shadow-cache `Image`s. These are the POD descriptors `bevy_image` itself takes
# from `wgpu-types`; `bevy::render::render_resource` only re-exports them, and
# importing THAT would drag in wgpu + naga. `wgpu-types` is not `wgpu`.
wgpu-types = "29"
avian3d = { workspace = true }
lunco-cosim = { path = "../lunco-cosim" }
lunco-core = { path = "../lunco-core" }

[lints]
workspace = true
