[package]
name = "lunco-geotiff"
version = "0.6.0-dev"
edition = "2021"
license.workspace = true
description = "GeoTIFF georeferencing tags — read and write the 'geo' half of a GeoTIFF"

[dependencies]
# TIFF container I/O — the same crate the asset processor encodes with and the
# terrain baker decodes with (one workspace pin). Pure Rust, wasm-safe.
tiff = { workspace = true }
# The GeoTIFF spec layer: GeoKey directory build/parse, tag constants, key
# ordering, value-offset indexing and ASCII terminators.
#
# ZERO transitive dependencies and I/O-agnostic — pure types — so it composes
# with the `tiff` I/O above instead of replacing it, and cannot threaten the
# wasm path the DEM web worker runs on.
#
# The first cut of this crate hand-rolled the key directory. That is the most
# spec-bound, least-reviewable part of the format (a key count that disagrees
# with its entries, or a missing ASCII terminator, yields a file that opens fine
# and georeferences wrongly), and it had already been solved properly upstream.
geotiff-core = "0.7"

[lints]
workspace = true
