[package]
name = "lunco-materials"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
# RENDER-FREE. This crate states shader appearance *intent* (`ShaderLook`), the
# WGSL-reflected parameter schema (`dyn_params`), the CDLOD vertex attribute
# (`vertex` — `bevy_mesh`, not `bevy_render`), the shader catalog/templates and the
# param-name bridge. `ShaderMaterial` (the `AsBindGroup`, hence `bevy_pbr` →
# `bevy_render` → wgpu/naga) lives in `lunco-render-bevy`. Do not add `bevy_pbr`
# back — see docs/architecture/render-decoupling.md.
#
# `bevy_image`: `Handle<Image>` in a `ShaderLook` texture layer.
# `zstd_rust`: bevy_image refuses to build without a zstd backend chosen. It was
# only ever compiling because another crate in the graph happened to select one —
# name it here so this crate stands alone.
bevy = { workspace = true, features = ["bevy_mesh", "bevy_image", "zstd_rust"] }
# `SurfaceAlpha` — transparency is a property of a SURFACE, not of a shading
# model, so a `ShaderLook` states it in the same vocabulary a `PbrLook` does
# instead of in a second enum free to drift from it. `lunco-render` is itself
# render-FREE (it is the crate that exists to state appearance without
# `bevy_pbr`), so this edge adds no wgpu, and it cannot cycle: `lunco-render`
# depends on no lunco crate.
lunco-render = { path = "../lunco-render" }

[lints]
workspace = true
