[package]
name = "lunco-mobility"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-fsw = { path = "../lunco-fsw" }
lunco-hardware = { path = "../lunco-hardware" }

[lints]
workspace = true
