[package]
name = "lunco-mobility"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-fsw = { path = "../lunco-fsw" }
lunco-hardware = { path = "../lunco-hardware" }

[features]
# Drive-actuation chain tracing (off by default). Lights up the DriveRover →
# port → wheel-force path with `info!` so a "rover won't move / snaps back" bug
# can be localised: command receipt + routing (`on_drive_rover`) and the
# per-tick force application incl. body kind / contact (`apply_wheel_drive`).
# Mirrors `lunco-networking`'s `net-diag`. Used via the `drive_diag!` macro —
# compiled out entirely when off (no hot-loop cost). Build with
# `--features lunco-mobility/drive-diag` (or lunco-client's `drive-diag`).
drive-diag = []

[lints]
workspace = true
